# fauplay

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
crates/fauplay-runtime/: Cargo.toml
crates/fauplay-runtime/src/: api.rs  fs.rs  lib.rs  main.rs  server.rs
crates/fauplay-runtime/src/api/: annotations.rs  duplicates.rs  errors.rs  faces.rs  file_content.rs  file_index.rs  global_trash.rs  listing.rs  mod.rs  paths.rs  remote_access.rs  root_operations.rs  runtime_home.rs
crates/fauplay-runtime/src/fs/: duplicates.rs  listing.rs  metadata.rs  mod.rs  root_move.rs  root_trash.rs
crates/fauplay-runtime/src/mcp/: config.rs  host.rs  mod.rs  stdio.rs
crates/fauplay-runtime/src/media/: mod.rs
crates/fauplay-runtime/src/server/: faces.rs  file_annotations.rs  file_index.rs  global_trash.rs  http.rs  local_files.rs  local_root_bindings.rs  mcp.rs  missing_files.rs  mod.rs  remembered_devices.rs  remote_access.rs  remote_published_roots.rs  request.rs  root_operations.rs  runtime_config.rs  static_files.rs
crates/fauplay-runtime/src/store/: faces.rs  file_annotation_records.rs  file_annotations.rs  file_index.rs  global_trash.rs  mod.rs  (+6 more)
crates/fauplay-runtime/tests/: duplicate_files.rs  file_annotation_api.rs  file_annotations.rs  file_content.rs  file_index.rs  file_index_api.rs  file_metadata.rs  list_local_directory.rs  root_move.rs  root_move_batch.rs  root_trash.rs  runtime_api.rs  runtime_home.rs  text_preview.rs
(+631 files in other folders)
