[package]
name = "fauplay-runtime"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "fauplay_runtime"
path = "src/lib.rs"

[[bin]]
name = "fauplay-runtime"
path = "src/main.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "webp"] }
regex = "1"
serde_json = "1"
sha2 = "0.10"
